# QuickJS-Debugger

./: .gitmodules  CMakeLists.txt  README.md  README.zh-CN.md  stderr.txt  test.js
.github/workflows/: build.yml  release.yml
compat/msvc/: stdatomic.h
debugger/: CMakeLists.txt
debugger/src/: cdp_handler.cpp  cdp_handler.h  debug_session.cpp  debug_session.h  json.h  main.cpp  platform.h  websocket_server.cpp  websocket_server.h
